@startuml
skinparam classAttributeIconSize 0

class ClientRepository {
    - clients : std::vector<ClientPtr>
    + get(index: int): ClientPtr
            + add(client: ClientPtr): void
            + remove(client: ClientPtr): void
            + size(): int
            + findByPersonalId(id: string): ClientPtr
}
note bottom of ClientRepository
  Repozytorium przechowuje klientów.
end note

class CarRepository {
    - cars : std::vector<CarPtr>
    + get(index: int): std::shared_ptr<Car>
            + add(car: std::shared_ptr<Car>): void
            + remove(car: std::shared_ptr<Car>): void
            + size(): int
            + findByVin(vin: string): std::shared_ptr<Car>

}
note bottom of CarRepository
  Repozytorium przechowuje samochody.
end note

class MechanicRepository {
    - mechanics : std::vector<MechanicPtr>
    + get(index: int): std::shared_ptr<Mechanic>
            + add(m: std::shared_ptr<Mechanic>): void
            + remove(m: std::shared_ptr<Mechanic>): void
            + size(): int
            + findById(id: int): std::shared_ptr<Mechanic>
}
note bottom of MechanicRepository
  Repozytorium przechowuje mechaników.
end note

class RepairRepository {
    - repairs : std::vector<RepairPtr>
    + get(index: int): RepairPtr
            + add(repair: RepairPtr): void
            + remove(repair: RepairPtr): void
            + size(): int
            + findById(id: int): RepairPtr
}
note bottom of RepairRepository
  Repozytorium przechowuje naprawy.
end note

class ResourceRepository {
    - resources : std::vector<ResourcePtr>
    + get(index: int): std::shared_ptr<Resource>
            + add(r: std::shared_ptr<Resource>): void
            + remove(r: std::shared_ptr<Resource>): void
            + size(): int
}
note bottom of ResourceRepository
  Przechowuje zasoby warsztatu.
end note

class StorageContainer {
    - clientRepository : ClientRepository
    - carRepository : CarRepository
    - mechanicRepository : MechanicRepository
    - repairRepository : RepairRepository
    - resourceRepository : ResourceRepository
    + getClientRepository(): ClientRepository&
            + getCarRepository(): CarRepository&
            + getRepairRepository(): RepairRepository&
            + getMechanicRepository(): MechanicRepository&
            + getResourceRepository(): ResourceRepository&
            + saveToFile(filePath: string): void
            + loadFromFile(filePath: string): void
}
note left of StorageContainer
  Klasa bazy danych:
  - tworzy repozytoria
  - wypełnia je danymi (z pliku lub testowymi)
end note

class ClientPredicate <<typedef std::function>>
class CarPredicate <<typedef std::function>>
class MechanicPredicate <<typedef std::function>>
class RepairPredicate <<typedef std::function>>
class ResourcePredicate <<typedef std::function>>

' Agregacja repozytoriów w kontenerze danych
StorageContainer "1" *-- "1" ClientRepository
StorageContainer "1" *-- "1" CarRepository
StorageContainer "1" *-- "1" MechanicRepository
StorageContainer "1" *-- "1" RepairRepository
StorageContainer "1" *-- "1" ResourceRepository

ClientRepository "1" --> "0..*" Client
RepairRepository "1" --> "0..*" Repair
ResourceRepository "1" --> "0..*" Resource
CarRepository "1" --> "0..*" Car
MechanicRepository "1" --> "0..*" Mechanic

' Użycie predykatów funkcyjnych
ClientRepository ..> ClientPredicate
CarRepository ..> CarPredicate
MechanicRepository ..> MechanicPredicate
RepairRepository ..> RepairPredicate
ResourceRepository ..> ResourcePredicate

note bottom of StorageContainer : Odpowiada za bezpośredni zapis i odczyt\nwszystkich repozytoriów przy użyciu boost::archive
@enduml